tests/neg/type_error8.scala
class Main {
  val data = Array[Int](10)
  val foo = data(0)(0)

  def main = {
    0
  }
}